# batch-files

./: .gitignore  .prettierignore  Batch Renamer.spec  README.md  STYLE_ADJUSTMENTS.md  batch_rename_gui.py  batch_rename_gui.py.bak  build_mac.sh  build_spec.py  build_win.bat  main.py  package.json  pyproject.toml  requirements-build.txt  requirements.txt  run.py  styles.py
.github/: copilot-instructions.md
flet/: main.py
src/batch_renamer/: __init__.py  main.py
src/batch_renamer/core/: __init__.py  renamer.py
src/batch_renamer/ui/: __init__.py  app.py  components.py  events.py
src/batch_renamer/utils/: __init__.py  constants.py  converter.py  strings.py
tests/: test_renamer.py
thinter/: README.md  i18n.py  run.sh
